# pet-on-desk

./: README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
public/: motionMap.example.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: diagnostics.rs  input_listener.rs  lib.rs  main.rs  model_scan.rs
src/components/: PermissionWizard.tsx  PetStage 2.tsx  PetStage.tsx  SettingsPanel.tsx
src/lib/: diagnostics.ts  events.ts  motionEngine.ts  settings.ts  windowInteraction.ts
src/lib/motion/: config.ts  modelAdapter.ts  tweenPresets.ts  validate.ts
